--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,7 @@
 	<head>
 	<meta charset="utf-8">
 	<title>Moo.PopBubble</title>
-	<link rel="stylesheet" href="pop.css">
+	<link rel="stylesheet" href="Moo.popBubble.css">
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato:300,400,700&amp;subset=latin,latin-ext">
 </head>
 
@@ -19,6 +19,6 @@
 	</form>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/mootools/1.5.2/mootools.min.js"></script>
-	<script src="pop.js"></script>
+	<script src="Moo.popBubble.js"></script>
 </body>
 </html>
