--- a/demo.html
+++ b/demo.html
@@ -4,8 +4,18 @@
 	<head>
 	<meta charset="utf-8">
 	<title>Moo.PopBubble</title>
+	
+	<!-- styles for PopBubble element -->
 	<link rel="stylesheet" href="Moo.popBubble.css">
+	
+	<!-- using Lato font for the bubble element, you cna replace with another font of your choice if you like -->
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato:300,400,700&amp;subset=latin,latin-ext">
+	<style>
+		.bubbleWrapper > p, .bubbleWrapper > a, .bubbleWrapper > form button, .bubbleWrapper > form input {
+			font-family: Lato, sans-serif;
+		}
+	</style>
+	
 </head>
 
 <body>
@@ -17,8 +27,32 @@
 		<input type="text" id="inputId" name="formText" placeholder="Type your text here and press Submit button"></input>
 		<button type="submit">Submit!</button>
 	</form>
-	
+		
 	<script src="https://ajax.googleapis.com/ajax/libs/mootools/1.5.2/mootools.min.js"></script>
 	<script src="Moo.popBubble.js"></script>
+	
+	<script>
+	
+		// DISPLAY FORM SUBMISSION RESULT:
+		
+		// create element with form text and inject
+		if(getUrlVars()['formText']){
+			new Element('p', {
+				'html': 'Form submitted with text: <strong>' + getUrlVars()['formText'] + '</strong>',
+				'styles': {
+					'text-align': 'center'
+				}
+			}).inject($$('body')[0], 'top');
+		}
+	
+		// read url variables, script by Ashley via http://papermashup.com/read-url-get-variables-withjavascript/
+		function getUrlVars() {
+			var vars = {};
+			var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value) {
+				vars[key] = value;
+			});
+			return vars;
+		}
+	</script>
 </body>
 </html>
