- added “demo” page link - changed JS to work with ugllify.js

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h1>
 <a id="moopopbubble" class="anchor" href="#moopopbubble" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Moo.PopBubble</h1>
 
-<p>A simple, light-weight contextual menu for links that supports buttons and forms.</p>
+<p>A simple, light-weight contextual menu for links that supports buttons and forms. <strong><a href="demo.html">DEMO</a></p>
 
 <h1>
 <a id="how-to-use" class="anchor" href="#how-to-use" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to use</h1>
