Object name declaration and capitalize file names

--- a/demo.html
+++ b/demo.html
@@ -6,7 +6,7 @@
 	<title>Moo.PopBubble</title>
 	
 	<!-- styles for PopBubble element -->
-	<link rel="stylesheet" href="Moo.popBubble.css">
+	<link rel="stylesheet" href="Moo.PopBubble.css">
 	
 	<!-- using Lato font for the bubble element, you cna replace with another font of your choice if you like -->
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato:300,400,700&amp;subset=latin,latin-ext">
@@ -38,7 +38,7 @@
 	
 	<!-- Of course, we'll need MooTools 1.5.2 and popBubble JavaScript libraries: -->
 	<script src="https://ajax.googleapis.com/ajax/libs/mootools/1.5.2/mootools.min.js"></script>
-	<script src="Moo.popBubble.js"></script>
+	<script src="Moo.PopBubble.js"></script>
 	
 	
 </head>
